--- a/platformio.ini
+++ b/platformio.ini
@@ -10,6 +10,6 @@
 
 [env:esp32doit-devkit-v1]
 platform = espressif32
-board = esp32doit-devkit-v1
+board = esp32-s3-devkitm-1
 framework = arduino
 lib_deps = gilmaimon/ArduinoWebsockets@^0.5.4
