--- a/platformio.ini
+++ b/platformio.ini
@@ -13,3 +13,4 @@ platform = espressif32
 board = esp32-s3-devkitm-1
 framework = arduino
 lib_deps = gilmaimon/ArduinoWebsockets@^0.5.4
+monitor_speed = 115200
